@@ -19,3 +19,20 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-streaming" % sparkVersion,
   "org.apache.spark" %% "spark-hive" % sparkVersion
 )
+
+fork := true
+
+javaOptions ++= Seq(
+  "-Djava.library.path=C:/Users/ckenn/Desktop/Winutils/bin", // May not be neccesary for none-windows env
+  "-Dhadoop.home.dir=C:/Users/ckenn/Desktop/Winutils", // Replace with own path to Winutils if need be
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/sun.misc=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+)
+
+javacOptions ++= Seq("-source", "1.8", "-target", "1.8")
